fix footer alignment

--- a/sass/blocks/_footer.scss
+++ b/sass/blocks/_footer.scss
@@ -19,8 +19,6 @@ footer {
 
     .region-footer {
       padding: 0;
-      margin-left: 0;
-      margin-right: 0;
 
       .dropdown-toggle {
         border-top: 0.0625rem solid $grey2;
